# HTTP

./: .gitignore  .swift-format  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  Package.swift  README.md
.github/workflows/: ci.yml
Bench/: .gitignore  README.md  run.sh
Bench/servers/: Caddyfile  Caddyfile-tls  nginx-tls.conf  nginx.conf
Benchmarking/Bench/: .gitignore  README.md  RESULTS.md  run.sh
Benchmarking/Bench/rust/: Cargo.toml
Benchmarking/Bench/rust/src/: main.rs
Benchmarking/Benchmarks/: Package.swift
Benchmarking/Django/: .gitignore  ADJSON.md  README.md  RESULTS.md  run.sh
Benchmarks/: Package.swift
Docs/Documentation/: Security.md
Docs/Standards/: CONFORMANCE.md  README.md  fetch.sh
Documentation/: Security.md
Documentation/adr/: 0001-bespoke-currency-types.md
Documentation/audit/: 2026-06-25-deep-hardening-audit.md  2026-06-25-perf-battletest.md
Sources/CHTTPTestMalloc/: shim.c
Sources/HPACK/: HPACKDecoder.swift  HPACKDynamicTable.swift  HPACKEncoder.swift  HPACKError.swift  HPACKField.swift  HPACKInteger.swift  HPACKStaticTable.swift  HPACKString.swift
Sources/HTTP1/: ChunkedBodyDecoder.swift  ChunkedDecoder.swift  HTTP1ParseError.swift  HTTPVersion.swift  HeaderParser.swift  ParsedRequest.swift  RequestLine.swift  RequestLineParser.swift  RequestParser.swift  ResponseSerializer.swift
Sources/HTTP2/: HTTP2Connection+AbuseBudget.swift  HTTP2Connection+Connect.swift  HTTP2Connection+ControlFrames.swift  (+19 more)
Standards/: CONFORMANCE.md  README.md
Tests/: MUTATION-OPERATORS.md
scripts/: linux-test.sh  pre-commit  vendor-boringssl.sh
(+1316 files in other folders)
